--- a/Config/Language/Geom2D_Rectangle_zh-TW.xml
+++ b/Config/Language/Geom2D_Rectangle_zh-TW.xml
@@ -2,5 +2,5 @@
 <ResMap>
   <Message ID="Width" Content="寬" />
   <Message ID="Height" Content="高" />
-  <Message ID="Fillet" Content="圓角半徑" />
+  <Message ID="Fillet" Content="倒角半徑" />
 </ResMap>
