1. 新增 zoom to fit 功能 觸發時機為調整視角、手動觸發 (menu)、新增主管、開啟舊檔
2. 新增 about 視窗

3. 修改 invoke sucess event 流程

4. 優化開啟舊檔的流程

--- a/Config/Language/CADEditMainForm_zh-TW.xml
+++ b/Config/Language/CADEditMainForm_zh-TW.xml
@@ -12,6 +12,7 @@
   <Message ID="m_tsmiDir_Pos" Content="特徵方向+" />
   <Message ID="m_tsmiDir_Neg" Content="特徵方向-" />
   <Message ID="m_tsmiISO" Content="等角投影" />
+  <Message ID="m_tsmiZoomToFit" Content="最適大小" />
   <Message ID="m_tsmiEdit" Content="編輯" />
   <Message ID="m_tsmiUndo" Content="復原" />
   <Message ID="m_tsmiRedo" Content="重作" />
@@ -33,4 +34,5 @@
   <Message ID="m_tsmiBendingNotch_VShape" Content="尖角V槽" />
   <Message ID="m_tsmiBendingNotch_BothSide" Content="圓角V槽" />
   <Message ID="m_tsmiBendingNotch_OneSide" Content="單側圓角V槽" />
+  <Message ID="m_tsmiAbout" Content="關於" />
 </ResMap>
